--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -9,8 +9,10 @@ import os
 
 args = sys.argv
 
-configfilename="config/config.json"
 
+# This is a workaround. In needed a variable for the configfilename
+# and this seemed to be the only way. But there are probably better ways.
+configfilename="config/config.json"
 i=0
 for arg in args:
     if arg=="--configfile" or arg=="--configfiles": # This is strange
@@ -28,6 +30,8 @@ include: "rules/docker_images.smk"
 singularity:
     docker_image("benchmark")
 
+# This function returns empty "trigger files" for the type of evaluations
+# that are used.
 def get_active_rules(wildcards):
     rules = []
     for key, val in config["benchmark_setup"]["evaluation"].items():
