--- a/workflow/envs/Dockerfile.bidag
+++ b/workflow/envs/Dockerfile.bidag
@@ -1,8 +1,3 @@
-FROM r-base
+FROM onceltuca/pcalg:2.7-3
 
-RUN R -e "if (!requireNamespace(\"BiocManager\", quietly = TRUE)) {install.packages(\"BiocManager\", repo=\"http://cran.rstudio.com/\")}" --no-save 
-RUN R -e "BiocManager::install()"  --no-save 
-RUN R -e "BiocManager::install(c(\"gRbase\", \"RBGL\", \"Rgraphviz\", \"gRain\"))" --no-save 
-RUN R -e "install.packages(\"pcalg\", repos=\"https://cran.rstudio.com\")" --no-save
-RUN R -e "install.packages(\"BiDAG\", repos=\"https://cran.rstudio.com\")" --no-save
-RUN R -e "install.packages(\"argparser\", repos=\"https://cran.rstudio.com\")" --no-save
+RUN R -e "install.packages(\"BiDAG\")" --no-save
