--- a/workflow/scripts/notears/Dockerfile.notears
+++ b/workflow/scripts/notears/Dockerfile.notears
@@ -9,4 +9,5 @@ RUN pip install -r requirements.txt
 RUN pip install matplotlib pandas
 ENV PYTHONPATH /git:/git/notears
 RUN apt update && apt install time 
+RUN pip install contextlib2
 CMD bash
