--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
   notears:
     image: onceltuca/jmoss20notears:1.4
     command: tail -f /dev/null
-  benchmark:
-    image: onceltuca/benchmark:1.0.8
+  benchpress:
+    image: onceltuca/benchpress:1.0.1
     working_dir: /myappdir
     command: jupyter lab --port 8080 --ip 0.0.0.0 --allow-root --no-browser
     volumes: 
