Fixed template for testing own algorithm mylib_myalg. Fixed some timeout bugs.

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -63,4 +63,5 @@ include: "rules/sample_adjmat.smk"
 include: "rules/sample_parameters.smk"
 include: "rules/sample_data.smk"
 include: "rules/algorithm_rules.smk"
+include: "rules/mylib_myalg.smk"
 include: "rules/evaluation.smk"
