--- a/workflow/envs/Dockerfile.parallelDG
+++ b/workflow/envs/Dockerfile.parallelDG
@@ -1,12 +1,9 @@
-FROM onceltuca/trilearn:1.23
-
-RUN apt install time
-
+onceltuca/paralleldg
 RUN mkdir git
 WORKDIR /git
 RUN git clone https://github.com/melmasri/parallelDG.git
 WORKDIR /git/parallelDG
 RUN pip install -r requirements.txt
 ENV PYTHONPATH /git:/git/parallelDG:/git/parallelDG/bin
-RUN apt update && apt install time 
-CMD bash
+RUN apt install time
+
