--- a/workflow/envs/Dockerfile.parallelDG
+++ b/workflow/envs/Dockerfile.parallelDG
@@ -1,9 +1,10 @@
-onceltuca/paralleldg
+FROM onceltuca/trilearn:1.23
+
 RUN mkdir git
 WORKDIR /git
 RUN git clone https://github.com/melmasri/parallelDG.git
 WORKDIR /git/parallelDG
 RUN pip install -r requirements.txt
 ENV PYTHONPATH /git:/git/parallelDG:/git/parallelDG/bin
+ENV PATH /git/parallelDG/bin:$PATH
 RUN apt install time
-
