--- a/workflow/envs/Dockerfile.parallelDG
+++ b/workflow/envs/Dockerfile.parallelDG
@@ -4,7 +4,10 @@ RUN mkdir git
 WORKDIR /git
 RUN git clone https://github.com/melmasri/parallelDG.git
 WORKDIR /git/parallelDG
+RUN git fetch --all --tags
+RUN git checkout v0.2.2 -b latest
 RUN pip install -r requirements.txt
 ENV PYTHONPATH /git:/git/parallelDG:/git/parallelDG/bin
 ENV PATH /git/parallelDG/bin:$PATH
+RUN chmod 755 bin/*
 RUN apt install time
