--- a/workflow/envs/Dockerfile.parallelDG
+++ b/workflow/envs/Dockerfile.parallelDG
@@ -4,8 +4,8 @@ RUN mkdir git
 WORKDIR /git
 RUN git clone https://github.com/melmasri/parallelDG.git
 WORKDIR /git/parallelDG
-RUN git fetch --all --tags
-RUN git checkout v0.2.2 -b latest
+RUN git fetch --all --tag # This is not triggered if the version is changed. It should be.
+RUN git checkout v0.3 -b latest
 RUN pip install -r requirements.txt
 ENV PYTHONPATH /git:/git/parallelDG:/git/parallelDG/bin
 ENV PATH /git/parallelDG/bin:$PATH
