--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.3"
 services:
   gobnilp:
-    image: onceltuca/gobnilp:1.6.3
+    image: onceltuca/gobnilp:4347c64
     command: tail -f /dev/null
   trilearn:
-    image: onceltuca/trilearn
+    image: onceltuca/trilearn:1.23-bp
     volumes: 
       - /tmp/.X11-unix:/tmp/.X11-unix
     environment:
@@ -14,7 +14,7 @@ services:
     image: onceltuca/jmoss20notears:1.4
     command: tail -f /dev/null
   benchpress:
-    image: onceltuca/benchpress:1.0.2
+    image: onceltuca/benchpress:1.2.0
     working_dir: /myappdir
     command: jupyter lab --port 8080 --ip 0.0.0.0 --allow-root --no-browser
     volumes: 
