--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -14,18 +14,22 @@ from snakemake.utils import min_version
 
 min_version("6.15") 
 
-# Check that Singularity >=3.2 is installed.  
-
+# Check that Apptainer or Singularity >=3.2 is installed.  
+(apptainer_ecode, apptainer_outp) = subprocess.getstatusoutput("apptainer --version")
 (ecode, outp) = subprocess.getstatusoutput("singularity --version")
-if ecode != 0:
-    raise Exception("Benchpress requires Singularity >= 3.2.")
 
-v1 = outp.split()[2].split(".")[0]
-v2 = outp.split()[2].split(".")[1]
-smkver = float(v1 + "." + v2)
-if smkver < 3.2:
-    raise Exception("You have " +outp+ ". Benchpress requires Singularity >= 3.2.")
+# Check if either singularity of apptainera is installed
+if ecode != 0 and apptainer_ecode != 0:
+    raise Exception("Benchpress requires Singularity >= 3.2 or Apptainer.")
+    #raise Exception("Benchpress requires Singularity >= 3.2.")
 
+# If Singularity and not apptainer is installer, check the version of Singularity.
+if ecode == 0 and apptainer_ecode != 0:
+    v1 = outp.split()[2].split(".")[0]
+    v2 = outp.split()[2].split(".")[1]
+    smkver = float(v1 + "." + v2)
+    if smkver < 3.2:
+        raise Exception("You have " +outp+ ". Benchpress requires Singularity >= 3.2.")
 
 # This is a workaround. Needed a variable for the configfilename
 # and this seemed to be the only way. But there are probably better ways.
