--- a/workflow/envs/Dockerfile.gcastle
+++ b/workflow/envs/Dockerfile.gcastle
@@ -6,6 +6,6 @@ WORKDIR /github/workspace
 
 RUN pip3 install  --upgrade pip  && \
     pip install torch>=1.9.0  && \
-    pip install gcastle==1.0.3rc3
+    pip install gcastle==1.0.3
 
 RUN pip install contextlib2
